--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -1,35 +1,55 @@
 find_package(glfw3 CONFIG REQUIRED)
-find_package(assimp REQUIRED)
+find_package(assimp CONFIG REQUIRED)
 
-
-# getting engine src files
-file(GLOB_RECURSE ENGINE_SRC
+file(
+	GLOB_RECURSE 
+	ENGINE_SRC 
+	LIST_DIRECTORIES true 
+	CONFIGURE_DEPENDS
 	"${CMAKE_CURRENT_SOURCE_DIR}/*.cpp" 
 	"${CMAKE_CURRENT_SOURCE_DIR}/*.h" 
 )
 
-set(GLSL_FILES)
 foreach(_ext IN LISTS GLSL_EXTS)
-  file(GLOB_RECURSE TMP "${CMAKE_CURRENT_SOURCE_DIR}/*.${_ext}")
+  file(
+	  GLOB_RECURSE 
+	  TMP 
+	  CONFIGURE_DEPENDS
+	  "${CMAKE_CURRENT_SOURCE_DIR}/*.${_ext}"
+  )
   list(APPEND GLSL_FILES ${TMP})
 endforeach()
 
-source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${ENGINE_SRC} ${GLSL_FILES})
+source_group(
+	TREE ${CMAKE_CURRENT_SOURCE_DIR} 
+	FILES ${ENGINE_SRC} ${GLSL_FILES}
+)
 
-# getting glad src files
-file(GLOB_RECURSE GLAD_FILES 
+file(
+	GLOB_RECURSE 
+	GLAD_FILES 
 	"${GLAD_SOURCE_DIR}/*.c" 
 	"${GLAD_SOURCE_DIR}/*.h" 
 )
 
-source_group(TREE ${GLAD_SOURCE_DIR} PREFIX "ThirdParty/Glad" FILES ${GLAD_FILES})
-# getting stb image src files
-file(GLOB_RECURSE STB_IMAGE_FILES 
+source_group(
+	TREE ${GLAD_SOURCE_DIR} 
+	PREFIX "ThirdParty/Glad" 
+	FILES ${GLAD_FILES}
+)
+
+file(
+	GLOB_RECURSE 
+	STB_IMAGE_FILES 
 	"${STB_IMAGE_SOURCE_DIR}/*.c" 
 	"${STB_IMAGE_SOURCE_DIR}/*.h"
 )
 
-source_group(TREE ${STB_IMAGE_SOURCE_DIR} PREFIX "ThirdParty/stb_image" FILES ${STB_IMAGE_FILES})
+source_group(
+	TREE ${STB_IMAGE_SOURCE_DIR} 
+	PREFIX "ThirdParty/stb_image" 
+	FILES ${STB_IMAGE_FILES}
+)
 
 set(ENGINE_LIB_SRC ${ENGINE_SRC} ${GLAD_FILES} ${STB_IMAGE_FILES})
 
@@ -37,9 +57,11 @@ list(REMOVE_ITEM ENGINE_LIB_SRC "${CMAKE_CURRENT_SOURCE_DIR}/main.cpp")
 
 add_library(Engine SHARED ${ENGINE_LIB_SRC} ${GLSL_FILES})
 
-# get all subdirs of ENGINE_SRC_PATH
-file(GLOB_RECURSE ENGINE_SUBDIRS LIST_DIRECTORIES true "${CMAKE_CURRENT_SOURCE_DIR}/*")
-list(FILTER ENGINE_SUBDIRS INCLUDE REGEX ".*/[^/]+$")
+foreach(I IN LISTS ENGINE_SRC)
+	if(IS_DIRECTORY ${I})
+		list(APPEND ENGINE_SUBDIRS ${I})
+	endif()
+endforeach()
 
 foreach(subdir IN LISTS ENGINE_SUBDIRS)
   target_include_directories(Engine PRIVATE ${subdir})
@@ -51,11 +73,12 @@ target_link_libraries(Engine
 	PRIVATE assimp::assimp
 )
 
-target_include_directories(Engine 
+target_include_directories(
+	Engine 
 	PUBLIC "${GLAD_SOURCE_DIR}/include"
-	PUBLIC ${STB_IMAGE_SOURCE_DIR}
-	PUBLIC ${GLM_SOURCE_DIR}
-	PUBLIC ${XM_SOURCE_DIR}
+	PUBLIC "${STB_IMAGE_SOURCE_DIR}"
+	PUBLIC "${GLM_SOURCE_DIR}"
+	PUBLIC "${XM_SOURCE_DIR}"
 	PUBLIC "${ASSIMP_INSTALL_DIR}/include"
 )
 
@@ -67,25 +90,13 @@ foreach(subdir IN LISTS ENGINE_SUBDIRS)
   target_include_directories(Main PRIVATE ${subdir})
 endforeach()
 
-set(GLSL_STAMP_FILE 
-    ${CMAKE_BINARY_DIR}/glsl_copied.stamp  # Пример: размещение в директории сборки
-)
-
-# Создание файла-маркера после копирования
 add_custom_command(
-    OUTPUT ${GLSL_STAMP_FILE}
-    COMMAND ${CMAKE_COMMAND} -E copy_if_different ${GLSL_FILES} ${BIN_PATH}
-    COMMAND ${CMAKE_COMMAND} -E touch ${GLSL_STAMP_FILE}
-    DEPENDS ${GLSL_FILES}
+	TARGET Engine
+    POST_BUILD
+	COMMAND ${CMAKE_COMMAND} -E copy_if_different ${GLSL_FILES} "$<TARGET_FILE_DIR:Engine>"
+	COMMENT "copying of glsl files..."
+    VERBATIM
+    COMMAND_EXPAND_LISTS
 )
 
-# Цель, зависящая от файла-маркера
-add_custom_target(
-    CopyGLSL
-    DEPENDS ${GLSL_STAMP_FILE}
-)
 
-# Связь с основной целью
-add_dependencies(Engine CopyGLSL)
-
-set_property(TARGET Main PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${BIN_PATH}")
